--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,8 @@
+@import "primeng/resources/themes/lara-light-blue/theme.css"
+@import "primeng/resources/primeng.css"
+@import "primeicons/primeicons.css"
 
+body
+  margin: 0
+  bottom: 0
+  box-sizing: border-box
